# Leef

./: .gitignore  CMakeLists.txt  README.md
database/: init_db.sql
database/tables/: annual_leave_balance_transaction.sql  file_order  holiday.sql  leave_application.sql  leave_application_status_enum.sql  leave_application_status_log.sql  leave_application_status_log_record.sql  leave_type_enum.sql  person.sql
doc/: application_api.txt  database_api.txt  requirements.txt  schemas.txt  ui_components.txt
resources/views/: index.html
src/: CMakeLists.txt  leef.cpp  leef.h  leev.cpp  leev.h
src/controllers/: CMakeLists.txt  root.cpp
